--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 These are my contributions to Byvire/sheehy_is_2017
 
-I recommend staying in the py folder, I moved over from python from c, and the data structures in my c code are written in such a way that reading the code is kind of nauseating (whoops). The python code is more concise, although, I would consider revisiting the c later, so I'll keep it around.
+I moved over to python from c for this project. Python is more concise. I'm working on the python version currently, but not doing anything with the c right now.
